Allow using lowercase enum names

Fixes: QTBUG-83395
Change-Id: I98dd953497c6e28a1cfb5228095f05547e49b11d
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>